--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2",
+    "@neondatabase/serverless": "^1.0.1",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -26,16 +26,16 @@
     "better-auth": "^1.3.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-persian-fonts": "^1.0.0",
     "next-themes": "^0.4.6",
-    "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
-    "tsx": "^4.20.5",
     "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
@@ -45,7 +45,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
