complate discount section

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.2.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -26,22 +26,30 @@
     "better-auth": "^1.3.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
-    "lucide-react": "^0.544.0",
+    "jalali-dayjs": "^0.0.1",
+    "lucide-react": "^1.4.3",
+    "moment-jalaali": "^0.10.4",
     "next": "15.5.3",
     "next-persian-fonts": "^1.0.0",
     "next-themes": "^0.4.6",
+    "radix-ui": "latest",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
+    "@biomejs/biome": "^0.544.0",
     "@tailwindcss/postcss": "^4",
+    "@types/moment-jalaali": "^0.7.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
