--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "jalali-dayjs": "^0.0.1",
-    "lucide-react": "^1.4.3",
+    "lucide-react": "^0.544.0",
     "moment-jalaali": "^0.10.4",
     "next": "15.5.3",
     "next-persian-fonts": "^1.0.0",
@@ -41,13 +41,13 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.2.1",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@biomejs/biome": "^0.544.0",
+    "@biomejs/biome": "2.2.4",
     "@tailwindcss/postcss": "^4",
     "@types/moment-jalaali": "^0.7.9",
     "@types/node": "^20",
